tdf#96222: Don't attempt to handle matrix formulas as formula groups

(Also known as array formulas.)

(cherry picked from commit aee3355a8a7a6b7749f2eddd74e9389fe5782186)
(cherry picked from commit 4d43f0c018c1f0fb12f55ebb16c074fb60a8aa73)

Change-Id: Ief61c75efb05ea7c880d05e118d9fe10177774db
Reviewed-on: https://gerrit.libreoffice.org/21839
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Eike Rathke <erack@redhat.com>